
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-513  Data Store onto HCatalog table fails for dynamic partitioning as the temporary directory gets deleted by the completed map tasks (amalakar via toffer)

  HCAT-490 HCatStorer() throws error when the same partition key is present in records in more than one tasks running as part of the same job (amalakar via toffer)

  HCAT-494 MultiOutputFormat in 0.23 fails to setAliasConf() correctly. (mithun via toffer)

  HCAT-507 e2e harness failing on 0.23 (toffer)

  HCAT-499 Multiple store commands does not work with Hadoop23 (rohinip via avandana)

  HCAT-445 Clover builds broken on trunk (rohinip via avandana)

  HCAT-477 Drop table API in webhcat client does not respect the "ifExists" parameter. (avandana)

  HCAT-471 Test HCat_ShowDes_1[1-3] fails (vikram.dixit via gates)

  HCAT-451 Partitions are created even when Jobs are aborted (avandana)

  HCAT-436 JSON SerDe column misnaming on CTAS (khorgath via gates)

  HCAT-449 HCatLoader is mistakenly identifying Configuration parameters to store (cdrome via traviscrawford)

  HCAT-452 HCat_Drop_Table_3 does not get initialized properly (cdrome via toffer)  

  HCAT-448 HCatStorer performance is 4x slower in HCat 0.4 than HCat 0.2 (rajesh.balamohan via khorgath)

  HCAT-437 HCatSchema's equals() implementation uses hashcode obtained from toString() method. (avandana)

  HCAT-438 HCatFieldSchema class does not have equals() method implementation (avandana)

  HCAT_416 MultiOutputFormat should handle merging of DistributedCache configurations (rohini via avandana)

  HCAT-423 HCatalog should include SerDe-reported fields in the table schema (traviscrawford via khorgath)
